// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utilisateursQueryModify Vérifie l'écriture de la requête sur un utilisateur 1`] = `
Object {
  "administration": Object {
    "activitesTypes": Array [],
    "departementId": null,
    "id": "aut-97300-01",
    "regionId": null,
    "titresTypes": Array [
      Object {
        "archive": null,
        "associee": true,
        "contenuIds": Array [
          Object {
            "elementId": "mecanise",
            "sectionId": "arm",
          },
          Object {
            "elementId": "franchissements",
            "sectionId": "arm",
          },
        ],
        "domaineId": "m",
        "gestionnaire": null,
        "id": "arm",
        "typeId": "ar",
      },
    ],
    "typeId": "aut",
  },
  "administrationId": "aut-97300-01",
  "dateCreation": "2022-05-12",
  "email": "utilisateurEmail",
  "entreprises": Array [],
  "entreprisesCreation": true,
  "id": "utilisateurId",
  "modification": true,
  "motDePasse": "utilisateurMotdepasse",
  "newsletter": null,
  "nom": "utilisateurNom",
  "permissionModification": true,
  "preferences": null,
  "prenom": null,
  "refreshToken": null,
  "role": "editeur",
  "suppression": true,
  "telephoneFixe": null,
  "telephoneMobile": null,
  "utilisateursCreation": true,
}
`;

exports[`utilisateursQueryModify Vérifie l'écriture de la requête sur un utilisateur 2`] = `
Object {
  "administration": Object {
    "activitesTypes": Array [],
    "departementId": null,
    "id": "aut-97300-01",
    "regionId": null,
    "titresTypes": Array [
      Object {
        "archive": null,
        "associee": true,
        "contenuIds": Array [
          Object {
            "elementId": "mecanise",
            "sectionId": "arm",
          },
          Object {
            "elementId": "franchissements",
            "sectionId": "arm",
          },
        ],
        "domaineId": "m",
        "gestionnaire": null,
        "id": "arm",
        "typeId": "ar",
      },
    ],
    "typeId": "aut",
  },
  "administrationId": "aut-97300-01",
  "dateCreation": "2022-05-12",
  "email": "utilisateurEmail",
  "entreprises": Array [],
  "entreprisesCreation": true,
  "id": "utilisateurId",
  "modification": true,
  "motDePasse": "utilisateurMotdepasse",
  "newsletter": null,
  "nom": "utilisateurNom",
  "permissionModification": true,
  "preferences": null,
  "prenom": null,
  "refreshToken": null,
  "role": "editeur",
  "suppression": true,
  "telephoneFixe": null,
  "telephoneMobile": null,
  "utilisateursCreation": true,
}
`;

exports[`utilisateursQueryModify Vérifie l'écriture de la requête sur un utilisateur 3`] = `
Object {
  "administration": Object {
    "activitesTypes": Array [],
    "departementId": null,
    "id": "aut-97300-01",
    "regionId": null,
    "titresTypes": Array [
      Object {
        "archive": null,
        "associee": true,
        "contenuIds": Array [
          Object {
            "elementId": "mecanise",
            "sectionId": "arm",
          },
          Object {
            "elementId": "franchissements",
            "sectionId": "arm",
          },
        ],
        "domaineId": "m",
        "gestionnaire": null,
        "id": "arm",
        "typeId": "ar",
      },
    ],
    "typeId": "aut",
  },
  "administrationId": "aut-97300-01",
  "dateCreation": "2022-05-12",
  "email": "utilisateurEmail",
  "entreprises": Array [],
  "entreprisesCreation": true,
  "id": "utilisateurId",
  "modification": false,
  "motDePasse": "utilisateurMotdepasse",
  "newsletter": null,
  "nom": "utilisateurNom",
  "permissionModification": false,
  "preferences": null,
  "prenom": null,
  "refreshToken": null,
  "role": "editeur",
  "suppression": false,
  "telephoneFixe": null,
  "telephoneMobile": null,
  "utilisateursCreation": false,
}
`;

exports[`utilisateursQueryModify Vérifie l'écriture de la requête sur un utilisateur 4`] = `
Object {
  "administration": Object {
    "activitesTypes": Array [],
    "departementId": null,
    "id": "aut-97300-01",
    "regionId": null,
    "titresTypes": Array [
      Object {
        "archive": null,
        "associee": true,
        "contenuIds": Array [
          Object {
            "elementId": "mecanise",
            "sectionId": "arm",
          },
          Object {
            "elementId": "franchissements",
            "sectionId": "arm",
          },
        ],
        "domaineId": "m",
        "gestionnaire": null,
        "id": "arm",
        "typeId": "ar",
      },
    ],
    "typeId": "aut",
  },
  "administrationId": "aut-97300-01",
  "dateCreation": "2022-05-12",
  "email": "utilisateurEmail",
  "entreprises": Array [],
  "entreprisesCreation": false,
  "id": "utilisateurId",
  "modification": false,
  "motDePasse": "utilisateurMotdepasse",
  "newsletter": null,
  "nom": "utilisateurNom",
  "permissionModification": false,
  "preferences": null,
  "prenom": null,
  "refreshToken": null,
  "role": "editeur",
  "suppression": false,
  "telephoneFixe": null,
  "telephoneMobile": null,
  "utilisateursCreation": false,
}
`;

exports[`utilisateursQueryModify Vérifie l'écriture de la requête sur un utilisateur 5`] = `
Object {
  "administration": Object {
    "activitesTypes": Array [],
    "departementId": null,
    "id": "aut-97300-01",
    "regionId": null,
    "titresTypes": Array [
      Object {
        "archive": null,
        "associee": true,
        "contenuIds": Array [
          Object {
            "elementId": "mecanise",
            "sectionId": "arm",
          },
          Object {
            "elementId": "franchissements",
            "sectionId": "arm",
          },
        ],
        "domaineId": "m",
        "gestionnaire": null,
        "id": "arm",
        "typeId": "ar",
      },
    ],
    "typeId": "aut",
  },
  "administrationId": "aut-97300-01",
  "dateCreation": "2022-05-12",
  "email": "utilisateurEmail",
  "entreprises": Array [],
  "entreprisesCreation": false,
  "id": "utilisateurId",
  "modification": false,
  "motDePasse": "utilisateurMotdepasse",
  "newsletter": null,
  "nom": "utilisateurNom",
  "permissionModification": false,
  "preferences": null,
  "prenom": null,
  "refreshToken": null,
  "role": "editeur",
  "suppression": false,
  "telephoneFixe": null,
  "telephoneMobile": null,
  "utilisateursCreation": false,
}
`;
